# fastapi-fruits-api

./: .gitignore  Dockerfile  Dockerfile.celery  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py
alembic/: env.py
alembic/versions/: 4c3d13cab9c4_add_fruits_initial_database_schema.py  ea18977fdf81_initial_migration.py
src/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
src/repositories/: __init__.py  fruit_repository.py
tests/: conftest.py  test_main.py  test_models.py
